Parameter fitting outline

--- a/parameter_fitting.ipynb
+++ b/parameter_fitting.ipynb
@@ -95,6 +95,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Evaluating Quality of Fit"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## A More Realistic Example"
    ]
   },
@@ -113,10 +120,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "There is considerable art in fitting. The quality of parameter fits\n",
     "can be improved by exploring the following:\n",
