--- a/model_construction.ipynb
+++ b/model_construction.ipynb
@@ -261,11 +261,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "References \n",
-    "\n",
-    "[1]\n",
-    "[2]\n",
-    "[3]"
+    "<br>\n",
+    "<html>\n",
+    "   <head>\n",
+    "      <title>Bibliography</title>\n",
+    "   </head>\n",
+    "   <body>\n",
+    "      <h1>Bibliography</h1>\n",
+    "      <ol>\n",
+    "         <li>\n",
+    "            <p>K. Choi et al., <cite>Tellurium: An extensible python-based modeling environment for systems and synthetic biology</cite>, Biosystems, vol. 171, pp. 74–79, Sep. 2018.</p>\n",
+    "         </li>\n",
+    "         <li>\n",
+    "            <p>E. T. Somogyi et al., <cite>libRoadRunner: a high performance SBML simulation and analysis library.,</cite>, Bioinformatics, vol. 31, no. 20, pp. 3315–21, Oct. 2015.</p>         \n",
+    "          <li>\n",
+    "            <p>L. P. Smith, F. T. Bergmann, D. Chandran, and H. M. Sauro, <cite>Antimony: a modular model definition language</cite>, Bioinformatics, vol. 25, no. 18, pp. 2452–2454, Sep. 2009.</p>\n",
+    "         </li>\n",
+    "         <li>\n",
+    "            <p>K. Choi, L. P. Smith, J. K. Medley, and H. M. Sauro, <cite>phraSED-ML: a paraphrased, human-readable adaptation of SED-ML</cite>, J. Bioinform. Comput. Biol., vol. 14, no. 06, Dec. 2016.</p>\n",
+    "         </li>\n",
+    "         <li>\n",
+    "            <p>J. Wolf, H. Y. Sohn, R. Heinrich, and H. Kuriyama, <cite>Mathematical analysis of a mechanism for autonomous metabolic oscillations in continuous culture of Saccharomyces cerevisiae</cite>, FEBS Lett., vol. 499, no. 3, pp. 230–234, Jun. 2001.</p>\n",
+    "         </li>\n",
+    "      </ol>\n",
+    "   </body>\n",
+    "</html>"
    ]
   }
  ],
