Begin outline for testing

--- a/parameter_fitting.ipynb
+++ b/parameter_fitting.ipynb
@@ -125,8 +125,8 @@
    "source": [
     "There is considerable art in fitting. The quality of parameter fits\n",
     "can be improved by exploring the following:\n",
-    "- **What you fit**. This means, which species concentrations you include in the residuals and what part of the time course\n",
-    "you try to fit.\n",
+    "- **What you fit**. This means, which species concentrations you include in the residuals, what part of the time course\n",
+    "you try to fit, and the ranges you choose for parameter values.\n",
     "- **How you fit**. There are several different algorithms for doing non-linear minimizations...\n",
     "- **How much compute**. Fitting is computationally intensive. More compute time is often needed for a better result. ``SBstoat`` helps\n",
     "in this regard by making use of multiple cores."
